version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/ABAQUS/AbaqusKeywordDataLine.rst.txt
.. vale off



:class:`AbaqusKeywordDataLine`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.ABAQUS.AbaqusKeywordDataLine(iAbaqusKeywordDataLine: Ansys.Common.Interop.FEParsePlugin_ABAQUS.IAbaqusKeywordDataLine)

   Bases: :py:obj:`object`


   
   Represents a keyword data line.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AbaqusKeywordDataLine

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Items`
            - Gets the data line values.







Property detail
---------------
.. py:property:: Items
   :type: Optional[tuple[str]]


   
   Gets the data line values.
















   ..
       !! processed by numpydoc !!







.. vale on