version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/ABAQUS/AbaqusKeywordDataLine.rst.txt
.. vale off



:class:`AbaqusKeywordDataLine`
==============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.ABAQUS.AbaqusKeywordDataLine(iAbaqusKeywordDataLine: Ansys.Common.Interop.FEParsePlugin_ABAQUS.IAbaqusKeywordDataLine)

   Bases: :py:obj:`object`


   
   Represents a keyword data line.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AbaqusKeywordDataLine

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Items`
            - Gets the data line values.







Property detail
---------------
.. py:property:: Items
   :type: Optional[tuple[str]]


   
   Gets the data line values.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on